--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@
   /* Hobbies column */
   .hobbies {   
     flex: 70%;
-    background-color: white;
+    background-color: #09C4A5;
     padding: 20px;
   }
   
